# xproperty

./: .gitignore  CMakeLists.txt  README.md
documentation/: Documentation.md  Main.md  MyProperty.md  Settings.md  SimpleExample01.md  SimpleExample02.md
source/: xproperty.h
source/examples/: example_properties.h  example_sprop.h  generate_documentation.h  main.cpp  my_properties.h
source/examples/create_documentation/: example_printing.h  example_properties.h  example_sprop.h  generate_documentation.h  main.cpp  my_properties.h
source/examples/imgui/: SolveExpression.h  calculator.cpp  calculator.h  my_properties.h  my_property_ui.h  my_property_ui_null.h  xPropertyImGuiExample.h  xPropertyImGuiInspector.cpp  xPropertyImGuiInspector.h
source/examples/simple_examples/: simple_examples_01.h  simple_examples_02.h
source/examples/xcore_sprop_serializer/: xcore_sprop_serializer.h
source/sprop/: property_sprop.h  property_sprop_collector.h  property_sprop_container.h  property_sprop_getset.h  property_sprop_xtextfile_serializer.h
source/xcore/: my_properties.cpp  my_properties.h
